--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["node"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -19,6 +20,14 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
+  },
+  "baseUrl": "./src",
+  "paths": {
+    "@/*": ["*"],
+    "@ui/*": ["src/shared/ui/*"],
+    "@api/*": ["api/*"],
+    "@config/*": ["config/*"],
+    "@hooks/*": ["hooks/*"]
   },
   "include": ["src"]
 }
